--- a/app/assets/css/anuncio.css
+++ b/app/assets/css/anuncio.css
@@ -30,17 +30,13 @@
     margin-right: 30px;
     position: relative; /* necesario para posicionar .abajodos respecto a este contenedor */
 }
-.anuncioArriba{
-    display: flex;
-    justify-content: space-between; /* separa el título y el icono */
-    align-items: center; /* alinea verticalmente */
-}
 
 /* Contenedor del título + favorito */
 .tituloFavorito {
-    display: flex;
-    align-items: center; /* centra verticalmente el icono con el h1 */
-    gap: 20em;           /* espacio entre h1 y el icono */
+  width: 100%;
+  display: flex;
+  align-items: center; /* centra verticalmente el icono con el h1 */
+  justify-content: space-between;           /* espacio entre h1 y el icono */
 }
 
 /* Asegura que el h1 no tenga margen inesperado */
@@ -92,7 +88,7 @@
 }
 
 /* Contenedor del precio y fecha — abajo a la derecha */
-.abajodos {
+.precioFecha {
     position: absolute;
     bottom: 0;          /* fija al fondo de la columna izquierda */
     right: 50px;        /* ajusta la distancia al borde */
@@ -100,12 +96,17 @@
     flex-direction: column;
     align-items: flex-end;
     text-align: right;
-    font-weight: 500;
+    font-weight: 1em;
 }
 
 /* Ajustes visuales */
-.abajodos label {
+.precioFecha p {
     margin: 3px 0;
+}
+
+.pPrecio {
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 /*anuncio derecha*/
@@ -204,7 +205,7 @@
     width: 50%;
   }
 
-  .abajodos {
+  .precioFecha {
     right: 30px;
   }
 }
@@ -227,7 +228,7 @@
   }
 
   .tituloFavorito {
-    flex-direction: column;
+    width: 80%;
     gap: 0.5em;
   }
 
@@ -244,7 +245,7 @@
     max-width: 90%;
   }
 
-  .abajodos {
+  .precioFecha {
     position: static; /* elimina posición absoluta */
     align-items: center;
     text-align: center;
@@ -296,7 +297,7 @@
     margin-top: 15px;
   }
 
-  .abajodos {
+  .precioFecha {
     font-size: 0.9em;
   }
 
