--- a/app/assets/css/misAnuncios.css
+++ b/app/assets/css/misAnuncios.css
@@ -25,7 +25,6 @@
 .misAnunciosCategorias{
   display: flex;
   flex-direction: column;
-  width: 60%;
   padding: 0.5rem;
   padding-right: 2.5em;
   border-right: 2px solid #1156CC;
@@ -333,15 +332,26 @@
 @media (max-width: 768px) {
     .misAnunciosformularioBusqueda {
         flex-direction: column;
-        gap: 0.5rem;
+        font-size: 0.7em;
     }
 
-    .misAnunciosformularioBusqueda select,
-    .misAnunciosformularioBusqueda input[type="search"],
-    .misAnunciosformularioBusqueda button {
-        width: 100%;
-        border-radius: 0.5rem;
+    .misAnunciosformularioBusqueda select{
+        width: auto;
+        border-top-right-radius: 1em;
+        border-bottom-left-radius: 0;
     }
+
+
+    .misAnunciosformularioBusqueda input[type="search"]{
+        width: auto;
+    }
+
+
+    .misAnunciosformularioBusqueda button {
+        width: auto;
+        border-top-right-radius: 0;
+    }
+
 
     .misAnunciosAnuncioCard {
         flex-direction: column;
@@ -379,19 +389,6 @@
     .misAnunciosMain {
         margin: 1em;
         gap: 0.8rem;
-    }
-
-    .misAnunciosformularioBusqueda {
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-
-    .misAnunciosformularioBusqueda select,
-    .misAnunciosformularioBusqueda input[type="search"],
-    .misAnunciosformularioBusqueda button {
-        width: 100%;
-        font-size: 0.9rem;
-        padding: 0.5rem;
     }
 
     .misAnunciosAnuncioCard {
