--- a/app/assets/css/anuncio.css
+++ b/app/assets/css/anuncio.css
@@ -34,6 +34,7 @@
 /* Contenedor del título + favorito */
 .tituloFavorito {
   width: 100%;
+  max-width: 500px; 
   display: flex;
   align-items: center; /* centra verticalmente el icono con el h1 */
   justify-content: space-between;           /* espacio entre h1 y el icono */
