--- a/app/assets/css/favoritos.css
+++ b/app/assets/css/favoritos.css
@@ -311,6 +311,12 @@ body {
     color: white;
 }
 
+.fade-out {
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
     
 @media (max-width: 1024px) {
     .FavoritoMain {
