--- a/app/assets/css/inicio.css
+++ b/app/assets/css/inicio.css
@@ -163,8 +163,13 @@
     flex-direction: column;
     justify-content: center;
     text-align: left;
-    text-decoration: none;
     font-size: 0.8em;
+}
+
+.nombreComerciante a,
+.nombreAnuncio a{
+    text-decoration: none;
+    color: black;
 }
 
 .nombreComerciante a:hover {
