--- a/app/assets/css/vendedor.css
+++ b/app/assets/css/vendedor.css
@@ -132,6 +132,10 @@ body{
     font-size: 1.3em;
 }
 
+.vendedorAnuncioTexto a {
+    text-decoration: none;
+}
+
 
 @media (max-width: 1024px) {
     .vendedorContenido {
